+ LaunchBox Platform XML files can be fetched and parsed (into usable javascript objects with typesript related interfaces) + XML with flash games is read, parsed and displayed in the BrowsePage + Input text of the search bar in the header is used to filter the titles of the games in the BrowsePage + Watching the renderer will now also watch /src/shared

--- a/static/styles/styles.css
+++ b/static/styles/styles.css
@@ -96,6 +96,30 @@ body {
 }
 
 
+/* ------ Browse ------ */
+.game_list {
+  
+}
+.game_list__item {
+  height: 3em;
+  /* Pimp */
+  background-color: #1b1b1c;
+  color: #aaa;
+}
+.game_list__item:nth-child(2n) {
+  /* Pimp */
+  background-color: #1e1e1f
+}
+.game_list__item img {
+  display: inline-block;
+  width: 3em;
+  height: 3em;
+}
+.game_list__item--hidden {
+  display: none;  
+}
+
+
 /* ------ Search & SearchTag Components ------ */
 .search {
   display: inline-flex;
