--- a/static/renderer/styles/styles.css
+++ b/static/renderer/styles/styles.css
@@ -230,6 +230,20 @@ body {
 }
 
 
+/* ------ About ------ */
+.about {
+  width: 100%;
+  height: 100%;
+  padding: 1em;
+  text-align: center;
+  box-sizing: border-box;
+}
+.about__title {
+  font-size: 2.5em;
+  padding-bottom: 0.5em;
+}
+
+
 /* ------ Browse ------ */
 .game-browser {
   width: 100%;
@@ -248,6 +262,12 @@ body {
   list-style: none;
   background-color: var(--theme__background-color);
   color: #aaa;
+}
+.game-list__item:hover {
+  /* Pimp */
+  background-color: #3c3c41;
+  color: #e6e6e6;
+  cursor: pointer;
 }
 .game-list__item--even {
   /* Pimp */
@@ -285,7 +305,17 @@ body {
 .game-list__item__right__genre {
   font-size: 0.8rem;
 }
-
+/* GameList NoGames */
+.game-list__no-games {
+  width: 100%;
+  height: 100%;
+  padding: 1em;
+  text-align: center;
+  box-sizing: border-box;
+}
+.game-list__no-games__title {
+  font-size: 2em;
+}
 
 /* ------ Search & SearchTag Components ------ */
 .search {
