+ Add AppConstants, a ts file that will contain static data that is accessible from anywhere (like the title of the app, or what version it is) + Make everything that shows the title, subtitle and version of the app get it from AppConstants + Make the browser redirect to the browse page when a search is made (from anywhere) + Add a note on the "games not found" message that tells the user that they have to reload the application for the config file to be read again + Add tutorial on the home page (so that new users know what to do) + Remove default tags from search bar (i left some debug tags there for a long time oopsie)

--- a/static/renderer/styles/styles.css
+++ b/static/renderer/styles/styles.css
@@ -211,6 +211,9 @@ body {
   font-size: 1.1em;
   padding-bottom: 1em;
 }
+.home__tutorial {
+  line-height: 1.35;
+}
 
 
 /* ------ Page-Not-Found (404) ------ */
