+ Add README file with basic instructions on how to setup, debug and release the app + Update TODO list + Make game order dropdown menus scale with font size

--- a/static/renderer/styles/styles.css
+++ b/static/renderer/styles/styles.css
@@ -199,6 +199,7 @@ body {
 /* Header Order By / Reverse */
 .header__order-by,
 .header__order-reverse {
+  font-size: 1em;
   margin-right: 0.5em;
   border: 1px solid #47474d;
   overflow: hidden;
