+ Pass config object from <App> to <ConfigPage> (through all the components in-between) + Add read only representations of the configs in ConfigPage (will be editable later on) + Add basic CSS for ConfigPage

--- a/static/renderer/styles/styles.css
+++ b/static/renderer/styles/styles.css
@@ -351,6 +351,17 @@ body {
   font-size: 2em;
 }
 
+/** ------ Config ------ */
+.config-page {
+  text-align: center;
+}
+.config-page p {
+  display: inline-block;
+}
+.config-page__row {
+  
+}
+
 /* ------ Search & SearchTag Components ------ */
 .search {
   display: inline-flex;
