Render the log data in the Logs tab

--- a/static/renderer/styles/styles.css
+++ b/static/renderer/styles/styles.css
@@ -386,3 +386,9 @@ body {
   /* Pimp */
   user-select: none;
 }
+
+/* ------ Logs ------ */
+.logs__log-data {
+  height: 100%;
+  overflow: scroll;
+}
