+ Add "Save & Exit" button to ConfigPage (that saves the currentlly inputted configs on the page into the config file and exits the app) + Move "input" and "checked" state from <PathInput> and <Toggle> up to <ConfigPage> (so that it can be saved into the file) + Minor style changes etc.

--- a/static/renderer/styles/styles.css
+++ b/static/renderer/styles/styles.css
@@ -377,6 +377,7 @@ body {
 /* Setting */
 .config-page .setting__title {
   font-size: 1.15em;
+  font-weight: bold;
 }
 /* Row */
 .config-page .setting__row {
