--- a/static/renderer/styles/styles.css
+++ b/static/renderer/styles/styles.css
@@ -236,7 +236,41 @@ body {
   user-select: none;
   background-color: #2a2a2b;
 }
-
+/* Game Count */
+.footer__game-count {
+  display: inline-block;
+  margin-left: 0.3em;
+}
+/* Scale Slider */
+.footer__scale-slider {
+  display: block;
+  float: right;
+  height: 1em;
+  margin: 0 0.3em;
+  width: 12em;
+  max-width: calc(100% - 0.3em * 2); /* 100% - Horizontal margin */
+}
+.footer__scale-slider input[type=range] {
+  width: 100%;
+  height: 100%;
+  -webkit-appearance: none;
+}
+.footer__scale-slider input[type=range]::-webkit-slider-runnable-track {
+  height: 100%;
+  cursor: pointer;
+  background: #484d4d;
+}
+.footer__scale-slider input[type=range]::-webkit-slider-thumb {
+  height: 100%;
+  width: 1.1rem;
+  margin-top: -0.7px;
+  -webkit-appearance: none;
+  cursor: pointer;
+  background: #7578ad;
+}
+.footer__scale-slider input[type=range]:focus::-webkit-slider-runnable-track {
+  background: #545a5a;
+}
 
 /* ------ Home ------ */
 .home {
@@ -295,11 +329,11 @@ body {
 /* GameList */
 .game-list {
   background-color: var(--theme__background-color);
+  /* --height | Height of list items (in pixels) */
 }
 /* GameList Item */
 .game-list__item {
   display: flex;
-  height: 50px;
   /* Pimp */
   list-style: none;
   background-color: var(--theme__background-color);
@@ -335,17 +369,17 @@ body {
 .game-list__item__right {
   flex: 1;
   overflow: hidden;
-  padding: 5px;
+  padding: calc(0.1px * var(--height));
 }
 .game-list__item__right__title {
-  font-size: 1.2rem;
+  font-size: calc(0.384px * var(--height));
   white-space: nowrap;
   /* Pimp */
   text-overflow: ellipsis;
   overflow: hidden;
 }
 .game-list__item__right__genre {
-  font-size: 0.8rem;
+  font-size: calc(0.256px * var(--height));
 }
 /* GameList NoGames */
 .game-list__no-games {
