--- a/static/renderer/styles/styles.css
+++ b/static/renderer/styles/styles.css
@@ -324,6 +324,13 @@ body {
 .game-browser {
   width: 100%;
   height: 100%;
+  display: flex;
+}
+.game-browser__left {
+  flex: 1 0 auto;
+}
+.game-browser__right {
+  padding: 0.25em;
 }
 
 /* GameList */
