+ Make each field in the sidebar editable and make them update the edited property of the selected game info object when done editing

--- a/static/renderer/styles/styles.css
+++ b/static/renderer/styles/styles.css
@@ -330,7 +330,11 @@ body {
   flex: 1 0 auto;
 }
 .game-browser__right {
+  width: 20em;
   padding: 0.25em;
+}
+.game-browser__right p {
+  display: inline;
 }
 
 /* GameList */
