+ Replace "Save & Exit" with "Save & Restart" (in Config) (it now relaunches the application after quiting it)

--- a/static/renderer/styles/styles.css
+++ b/static/renderer/styles/styles.css
@@ -501,7 +501,7 @@ body {
   color: var(--theme__text-color);
 }
 /* Row - SaveAndExit */
-.config-page .save-and-exit input[type="button"] {
+.config-page .save-and-restart input[type="button"] {
   font-size: 1.075em;
 }
 
