--- a/static/renderer/styles/styles.css
+++ b/static/renderer/styles/styles.css
@@ -453,6 +453,7 @@ body {
 }
 .config-page input[type="checkbox"] {
   vertical-align: middle;
+  transform: scale(1.25);
 }
 /* Setting */
 .setting {
@@ -463,9 +464,14 @@ body {
   border-radius: 0.2em;
   background-color: #242428;
   border: 1px solid #141417;
+  box-shadow: 0px 2px 4px 0px #09090a;
+}
+.setting > :first-child {
+  border-top: 0;
 }
 .setting__title {
-  font-size: 1.15em;
+  margin: 0.2em 0;
+  font-size: 1.2em;
   font-weight: bold;
 }
 /* Setting Row */
