--- a/static/renderer/styles/styles.css
+++ b/static/renderer/styles/styles.css
@@ -440,19 +440,14 @@ body {
 /* GameList */
 .game-grid {
   background-color: var(--theme__background-color);
-  /* --height | Height of list items (in pixels) */
+  /* --width | Width of grid items (in pixels) */
+  /* --height | Height of grid items (in pixels) */
 }
 /* GameList Item */
 .game-grid__item {
-  display: flex;
   /* Pimp */
   list-style: none;
-  background-color: var(--theme__background-color);
   color: #aaa;
-}
-.game-grid__item--even {
-  /* Pimp */
-  background-color: #1e1e1f
 }
 .game-grid__item:hover {
   /* Pimp */
@@ -472,9 +467,36 @@ body {
 }
 /* GameList Item Thumb */
 .game-grid__item__thumb {
+  padding: calc(var(--width) * 0.0025rem);
+}
+.game-grid__item__thumb__image {
+  width: 100%;
+  height: 100%;
   background-size: contain;
   background-repeat: no-repeat;
   background-position: center;
+  /* Pimp */
+  border-radius: 0.2em;
+  background-color: #242428;
+  border: 1px solid #141417;
+  box-shadow: 0px 2px 4px 0px #09090a;
+}
+/* GameList Item Title */
+.game-grid__item__title {
+  padding: calc(var(--width) * 0.001rem);
+  text-align: center;
+  /* Pimp */
+  font-weight: bold;
+}
+.game-grid__item__title__text {
+  display: -webkit-box;
+  -webkit-line-clamp: 3;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  font-size: calc((16 / 188) * var(--height) * 1px);
+  /* Pimp */
+  font-weight: bold;
 }
 /* GameList NoGames */
 .game-grid__no-games {
